@@ -226,10 +226,8 @@ function builders.products(line, parent_flow, metadata)
         local machine_count = (not line.subfloor) and line.machine.count or nil
         local amount, number_tooltip = view_state.process_item(metadata.view_state_metadata,
           product, nil, machine_count)
-        if amount == "0" and line.subfloor then goto skip_product end  -- amount can't be -1 for products
 
         local style, note = "flib_slot_button_default_small", nil
-
         if not line.subfloor and not metadata.matrix_solver_active then
             -- We can check for identity because they reference the same table
             if line.priority_product_proto == product.proto then
@@ -246,8 +244,6 @@ function builders.products(line, parent_flow, metadata)
         parent_flow.add{type="sprite-button", tags={mod="fp", on_gui_click="act_on_line_product", line_id=line.id,
           class="Product", item_id=product.id}, sprite=product.proto.sprite, style=style, number=amount,
           tooltip=tooltip, mouse_button_filter={"left-and-right"}}
-
-        ::skip_product::
     end
 end
 
